--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@types/node": "^20.2.5"
   },
   "dependencies": {
+    "node-addon-api": "^8.0.0",
+    "node-gyp": "^10.1.0",
     "ts-node": "^10.9.1"
   }
 }
